--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,10 @@
     <hr>
     <p><b>Name:</b> Anandi Shendge<br><b>Age:</b>19 years<br><b>College: </b>VIT Vellore<br><b>Studing Year: </b>2nd year</p>
     <hr>
-    <img src="pic 2.jpg" alt="profile pic" title="Pic"><br>
+    <img src="pic 2.jpg" alt="profile pic" title="Pic" width="240" height="400"><br>
     <hr>
     <a href="ContactMe.html">Contact me</a><br>
     <a href="Hobbies.html">Hobbies</a>
 </body>
+
 </html>
