--- a/profile.html
+++ b/profile.html
@@ -12,5 +12,7 @@
     <hr>
     <a href="ContactMe.html">Contact me</a><br>
     <a href="Hobbies.html">Hobbies</a>
+     <a href="form.html">Form</a>
 </body>
+
 </html>
