--- a/profile.html
+++ b/profile.html
@@ -10,9 +10,9 @@
     <hr>
     <img src="pic 2.jpg" alt="profile pic" title="Pic" width="240" height="400"><br>
     <hr>
-    <a href="ContactMe.html">Contact me</a><br>
-    <a href="Hobbies.html">Hobbies</a>
-     <a href="form.html">Form</a>
+    <p>To see my contact click:<a href="ContactMe.html">Contact me</a><br></p>
+    <p>To check my hobbies click: <a href="Hobbies.html">Hobbies</a></p>
+    <p>To fill the form kindly click the below link:  
+    <a href="form.html">Form</a></p>
 </body>
-
 </html>
