--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <label for="dob">Date of Birth</label>
-            <input type="date" name="dob" id="dob" min="01-01-1900"><br>
+            <input type="date" name="dob" id="dob" min="01-01-1900"><br><hr></hr>
             <p><b><i>FOOD TYPE</i></b></p>
         
             <input type="checkbox" name="Veg" id="Veg">
@@ -25,7 +25,7 @@
         </div>
         <div>
             <input type="checkbox" name="Nonveg" id="Nonveg">
-            <label for="Nonveg">Non veg</label>
+            <label for="Nonveg">Non veg</label><hr></hr>
         </div>
         <div>
             <p><b><i>GENDER</i></b></p>
@@ -41,20 +41,20 @@
             <label for="other">Other</label><br>
         </div>
         <div>
-            <p><b><i>ABOUT YOURSELF</i></b></p>
+            <p><b><i>ABOUT YOURSELF</i></b></p><hr></hr>
             <label for="about">About</label>
             <textarea name="about" id="about" cols="20" rows="5">
             </textarea>
         </div>
         <div>
-            <p><b><i>CITY</i></b></p>
+            <p><b><i>CITY</i></b></p><hr></hr>
         <select>
             <option value="Aurangabad">Aurangabad</option>
             <option value="Pune">Pune</option>
             <option value="Mumbai">Mumbai</option>
             <option value="Solapur">Solapur</option>
         </select>
-        </div>
+        </div><hr></hr>
         <div>
             <p><b><i>FILE UPLOAD</i></b></p>
             <label for="file">Resume</label>
@@ -65,4 +65,5 @@
         <button type="reset">Reset</button>
     </form>
 </body>
+
 </html>
