--- a/form.html
+++ b/form.html
@@ -41,13 +41,15 @@
             <label for="other">Other</label><br>
         </div>
         <div>
-            <p><b><i>ABOUT YOURSELF</i></b></p><hr></hr>
+            <hr></hr>
+            <p><b><i>ABOUT YOURSELF</i></b></p>
             <label for="about">About</label>
             <textarea name="about" id="about" cols="20" rows="5">
             </textarea>
         </div>
         <div>
-            <p><b><i>CITY</i></b></p><hr></hr>
+            <hr></hr>
+            <p><b><i>CITY</i></b></p>
         <select>
             <option value="Aurangabad">Aurangabad</option>
             <option value="Pune">Pune</option>
@@ -67,3 +69,4 @@
 </body>
 
 </html>
+
