--- a/thankyou.html
+++ b/thankyou.html
@@ -6,5 +6,7 @@
 <body>
     <h2>Thank You for Signing Up!</h2>
     <p>Your form has been submitted successfully.</p>
+     <p>Go back to home page: <a href="profile.html">Profile</a><br></p>
 </body>
 </html>
+
